--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,27 @@
-name: Ruby
-
+name: CI
 on:
   push:
-    branches:
-      - master
-
+    branches: main
   pull_request:
-
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    name: Ruby ${{ matrix.ruby }}
+  tests:
     strategy:
       matrix:
-        ruby:
-          - '3.3.6'
-
+        platform: ["ubuntu-latest", "macos-latest"]
+        ruby: [3.1, 3.2, 3.3, 3.4]
+    runs-on: ${{ matrix.platform }}
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: ${{ matrix.ruby }}
-          bundler-cache: true
-      - name: Run the default task
-        run: bundle exec rake
+    - name: Set up Git repository
+      uses: actions/checkout@main
+
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: ${{ matrix.ruby }}
+        bundler-cache: true
+
+    - name: Run linter
+      run: bundle exec rake standard
+
+    - name: Run tests
+      run: bundle exec rake spec
